<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/real_cf_tile"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TableLayout
        android:id="@+id/log_display"
        android:layout_width="1349dp"
        android:layout_height="0dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:text="@string/heading1"
                android:textColor="@color/colorTextHeading"
                android:textSize="@dimen/table_heading_text_size" />

            <TextView
                android:layout_weight="1"
                android:text="@string/heading2"
                android:textColor="@color/colorTextHeading"
                android:textSize="@dimen/table_heading_text_size" />

            <TextView
                android:layout_weight="1"
                android:text="@string/heading3"
                android:textColor="@color/colorTextHeading"
                android:textSize="@dimen/table_heading_text_size" />

            <TextView
                android:layout_weight="1"
                android:text="@string/heading4"
                android:textColor="@color/colorTextHeading"
                android:textSize="@dimen/table_heading_text_size" />

            <TextView
                android:layout_weight="1"
                android:text="@string/heading5"
                android:textColor="@color/colorTextHeading"
                android:textSize="@dimen/table_heading_text_size" />

        </TableRow>

        <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:scrollbars="none">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/entry_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>
        <!--</ScrollView>-->

    </TableLayout>

    <Button
        android:id="@+id/add_entry_button"
        android:layout_width="233dp"
        android:layout_height="84dp"
        android:layout_marginBottom="60dp"
        android:text="@string/entry_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>